@@ -10,7 +10,6 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <junit.jupiter.version>5.4.0</junit.jupiter.version>
     <junit.platform.version>1.4.0</junit.platform.version>
@@ -25,6 +24,11 @@
         <version>1.6.0</version>
         <configuration>
           <mainClass>${mainClass}</mainClass>
+          <compilerArgs>
+            <arg>--add-modules JDA</arg>
+            <arg>--add-modules fastjson</arg>
+            <arg>--add-modules slf4j.api</arg>
+          </compilerArgs>
         </configuration>
         <executions>
           <execution>
@@ -85,11 +89,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.26</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
       <version>1.7.26</version>
     </dependency>
     <dependency>
